bdr.BDR2.scala.error
Erreur de compilation :
BDR2:1: error: illegal start of simple expression
while (estSurMessage()==true) match {
                              ^